# openchat

./: Cargo.toml  README.md  openchat-audit.jsonl
src/: app.rs  chat.rs  main.rs  ollama.rs  server.rs
src/audit/: ids.rs  mod.rs  records.rs  time.rs
