[package]
name = "openchat-cogsci"
description = "A general chat widget for HCI and cognitive sciences"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33"
egui = "0.33"
egui_inbox = "0.10"
catppuccin-egui = { version = "5.7.0", default-features = false, features = ["egui33"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "io-std"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
rusqlite = { version = "0.32", features = ["bundled"] }
egui-phosphor = "0.11"

